[package]
name = "coretime-renewal-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.38.1"
tokio = {version = "1.37.0", features = ["macros", "time", "rt-multi-thread"]}
hex = { version = "0.4.3", default-features = false }
subxt-signer = { version = "0.38.1", features = ["subxt"]}
